--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Git Back Young Fella</h1>
+    <header>
+        <nav>
+            <img src="hippopotamus.png" alt="Hippopotamus logo" class="logo">
+            <ul>
+                <li>
+                    <a href="#">Filler</a>
+                </li>
+                <li>
+                    <a href="#">Filler</a>
+                </li>
+                <li>
+                    <a href="#">Filler</a>
+                </li>
+            </ul>
+            <button class="signup">
+                <a href="#">Signup</a>
+            </button>
+        </nav>
+    </header>
 </body>
 </html>
