Intro to variables

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <img src="hippopotamus.png" alt="Hippopotamus logo" class="logo">
-            <ul>
+            <ul class="pages">
                 <li>
                     <a href="#">Filler</a>
                 </li>
