--- a/animated.html
+++ b/animated.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="animated.css">
 </head>
 <body>
-    <div class="background"></div>
+    <div class="background">
+        <img src="fox.png" alt="Fox">
+    </div>
 </body>
 </html>
