--- a/index.html
+++ b/index.html
@@ -26,5 +26,10 @@
             </button>
         </nav>
     </header>
+    <main>
+        <section>
+            <img src="fox.png" alt="fox" class="fox">
+        </section>
+    </main>
 </body>
 </html>
