--- a/page2.html
+++ b/page2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="style2.css">
 </head>
 
 <body>
@@ -63,6 +64,8 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        @copy; Matt Ramey
+    </footer>
 </body>
 </html>
