--- a/animated.html
+++ b/animated.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="animated.css">
 </head>
 <body>
-    <div class="background">
-        <img src="fox.png" alt="Fox">
+    <div class="circle move"> tyhjngfd
+    </div>
+    <div class="circle"> 
     </div>
 </body>
 </html>
