--- a/animated.html
+++ b/animated.html
@@ -9,7 +9,7 @@
 <body>
     <div class="circle move"> tyhjngfd
     </div>
-    <div class="circle"> 
+    <div class="circle animate"> aaaaaaaa
     </div>
 </body>
 </html>
