--- a/page2.html
+++ b/page2.html
@@ -62,6 +62,26 @@
             <div class="square"></div>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum perspiciatis ipsum animi aliquam maxime magnam velit cum, alias ratione nostrum accusamus cupiditate tenetur dignissimos nam, veritatis voluptas illum dolorem reprehenderit?</p>
         </section>
+        <section class="card">
+            <h2>Name</h2>
+            <div class="square"></div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum perspiciatis ipsum animi aliquam maxime magnam velit cum, alias ratione nostrum accusamus cupiditate tenetur dignissimos nam, veritatis voluptas illum dolorem reprehenderit?</p>
+        </section>
+        <section class="card">
+            <h2>Name</h2>
+            <div class="square"></div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum perspiciatis ipsum animi aliquam maxime magnam velit cum, alias ratione nostrum accusamus cupiditate tenetur dignissimos nam, veritatis voluptas illum dolorem reprehenderit?</p>
+        </section>
+        <section class="card">
+            <h2>Name</h2>
+            <div class="square"></div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum perspiciatis ipsum animi aliquam maxime magnam velit cum, alias ratione nostrum accusamus cupiditate tenetur dignissimos nam, veritatis voluptas illum dolorem reprehenderit?</p>
+        </section>
+        <section class="card">
+            <h2>Name</h2>
+            <div class="square"></div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum perspiciatis ipsum animi aliquam maxime magnam velit cum, alias ratione nostrum accusamus cupiditate tenetur dignissimos nam, veritatis voluptas illum dolorem reprehenderit?</p>
+        </section>
     </main>
 
     <footer>
