--- a/proj2.html
+++ b/proj2.html
@@ -30,24 +30,26 @@
             </div>
 
             <div class="right">
-                <section class="name">
-                    <h3>NAME</h3>
-                    <label for="order">
-                        Name for order
-                    </label>
-                    <input type="text">
-                </section>
-                <section class="payment">
-                    <h3>PAYMENT</h3>
-                    <label for="card-number">
-                        Card number
-                    </label>
-                    <input type="text">
-                    <label for="ccv-number">
-                        CCV number
-                    </label>
-                    <input type="text">
-                </section>
+                <div>
+                    <section class="name">
+                        <h3>NAME</h3>
+                        <label for="order">
+                            Name for order
+                        </label>
+                        <input type="text">
+                    </section>
+                    <section class="payment">
+                        <h3>PAYMENT</h3>
+                        <label for="card-number">
+                            Card number
+                        </label>
+                        <input type="text">
+                        <label for="ccv-number">
+                            CCV number
+                        </label>
+                        <input type="text">
+                    </section>
+                </div>
                 <section class="pay-totals"> 
                     <p>Subtotal</p>
                     <p>Tax</p>
