--- a/p22.html
+++ b/p22.html
@@ -15,10 +15,10 @@
     <main>
         <section class="items">
             <h3>ITEMS</h3>
-            <table>
+            <table class="items-table">
                 <tr class="item">
                     <td>1x</td>
-                    <td>Cappuccino</td>
+                    <td class="item-name">Cappuccino</td>
                     <td>$3.35</td>
                 </tr>
                 <tr>
