--- a/p22.html
+++ b/p22.html
@@ -13,6 +13,7 @@
     </header>
 
     <main>
+        <div></div>
         <section class="items">
             <h3>ITEMS</h3>
             <table class="items-table">
@@ -48,7 +49,7 @@
                 </tr>
             </table>
         </section>
-
+    </div>
         <section class="name">
             <h3>NAME</h3>
             <label for="order-name">Name for order</label>
