More calculator styling

--- a/calculator.html
+++ b/calculator.html
@@ -1,21 +1,21 @@
-<!DOCTYbuttonE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewbuttonort" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="calculator.css">
 </head>
 <body>
     <main>
         <section class="calculator">
-            <section class="disbuttonlay">
-                <button>0</button>
+            <section class="display">
+                <p>0</p>
             </section>
             <section class="clear">
                 <button>Clear</button>
             </section>
-            <section class="backsbuttonace">
+            <section class="backspace">
                 <button>Back</button>
             </section>
             <section class="seven">
@@ -51,7 +51,7 @@
             <section class="division">
                 <button>/</button>
             </section>
-            <section class="multibuttonlication">
+            <section class="multiplication">
                 <button>x</button>
             </section>
             <section class="subtraction">
