Added some javascript

--- a/calculator.html
+++ b/calculator.html
@@ -61,9 +61,11 @@
                 <button>+</button>
             </section>
             <section class="equals">
-                <button>=</button>
+                <button onclick="calculate()">=</button>
             </section>
         </section>
     </main>
+
+    <script src="calculator.js"></script>
 </body>
 </html>
