Some more javascript added

--- a/calculator.html
+++ b/calculator.html
@@ -18,7 +18,7 @@
             <section class="backspace">
                 <button>Back</button>
             </section>
-            <section class="seven">
+            <section class="seven" onclick="setOperands('7')">
                 <button>7</button>
             </section>
             <section class="eight">
