Some interesting styling added

--- a/calculator.html
+++ b/calculator.html
@@ -16,7 +16,7 @@
                 <button onclick="clearDisplay()">Clear</button>
             </section>
             <section class="backspace">
-                <button>Back</button>
+                <button onclick="backspace()">Back</button>
             </section>
             <section class="seven" onclick="setOperands('7')">
                 <button>7</button>
