More card stuff

--- a/glow.html
+++ b/glow.html
@@ -9,7 +9,10 @@
 <body>
     <button>Glowing Button</button>
 
-    <div class="box">Some stuff.</div>
+    <div class="box">
+        <div class="front">FRONT</div>
+        <div class="back">BACK</div>
+    </div>
     
 </body>
 </html>
